# rover

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml
arm_firmware/: CMakeLists.txt
arm_firmware/include/: MicroROS.h
arm_firmware/scripts/: upload_firmware.sh
arm_firmware/src/: Main.cpp  compat_stubs.c
common/urc_msgs/: CMakeLists.txt  package.xml
common/urc_msgs/action/: FollowGPSWaypoints.action  GoToNamedWaypoint.action  NavigateToGPS.action
control/nav_supervisor/: CMakeLists.txt  package.xml  setup.py
control/nav_supervisor/launch/: nav_supervisor.launch.py
control/nav_supervisor/nav_supervisor/: node.py
control/rover_control/: CMakeLists.txt  UNO_SETUP_GUIDE.md  package.xml  setup.py
control/rover_control/action/: DriveToPose.action  FollowPath.action
control/rover_control/config/: controller_config.yaml  safety_params.yaml
control/rover_control/launch/: uno_drive.launch.py
control/rover_control/rover_control/: __init__.py  action_servers.py  drive_bridge.py  hardware_interface.py  keyboard_teleop.py  odometry_publisher.py  path_follower.py  safety_monitor.py
control/rover_control/test/: README.md
moveit/arm_control/: CMakeLists.txt  README.md  package.xml  setup.py
moveit/arm_control/action/: GoToNamedPose.action  PickAndPlace.action
moveit/arm_control/arm_control/: __init__.py  action_servers.py  gripper_controller.py  hardware_interface.py  safety_monitor.py  tool_manager.py  trajectory_executor.py
moveit/arm_control/launch/: arm_control.launch.py
moveit/arm_control/msg/: Fault.msg
moveit/arm_control/old_arm/: arm.py  controller.py  recv_controller.py  ros_arm_interface.py
moveit/arm_control/resource/: arm_control
moveit/arm_control/scripts/: move_to_position.py
moveit/arm_template/: CMakeLists.txt  setup.py
moveit/arm_template/launch/: demo.launch.py
moveit/arm_template/scripts/: generate_moveit_config.py  generate_srdf.py  setup_assistant_wrapper.py  validate_params.py
moveit/arm_template/urdf/: gripper_template.urdf.xacro
moveit/moveit_config_rover/: CMakeLists.txt  README.md  SIMULATION_TO_HARDWARE.md  package.xml
moveit/moveit_config_rover/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  rover_arm.srdf  rover_arm.srdf.backup  rover_arm_controllers.yaml
moveit/moveit_config_rover/hardware/: rover_arm_hardware.py
moveit/moveit_config_rover/launch/: arm_moveit_sim.launch.py  move_group.launch.py
moveit/moveit_config_rover/rviz/: moveit.rviz
moveit/moveit_config_rover/scripts/: moveit_arm_controller.py  teleop_arm.py  test_arm_control.py
moveit/moveit_config_rover/urdf/: rover_arm.urdf.xacro
moveit/moveit_config_template/: CMakeLists.txt  package.xml
navigation/global_nav/path_planner/: CMakeLists.txt  package.xml  setup.py
navigation/local_nav/gap-guidance/: CMakeLists.txt  package.xml  setup.py
navigation/nav2_launch/: CMakeLists.txt  package.xml
navigation/nav2_launch/config/: controller_params.yaml  costmap_global.yaml  costmap_local.yaml  nav2_params.yaml  planner_params.yaml
navigation/nav2_launch/launch/: complete_nav.launch.py  nav2_bringup.launch.py
navigation/nav2_teensy_bridge/: nav2_teensy_bridge  package.xml  setup.py
navigation/nav2_teensy_bridge/launch/: teensy_bridge.launch.py
navigation/nav2_teensy_bridge/nav2_teensy_bridge/: nav2_teensy_bridge.py
perception/aruco_detector/: CMakeLists.txt  README.md  package.xml  setup.py
perception/aruco_detector/aruco_detector/: core.py  node.py  zed_interface.py
perception/aruco_detector/config/: detector_params.yaml
perception/aruco_detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
perception/aruco_detector/launch/: aruco_detector.launch.py  aruco_with_zed.launch.py
perception/aruco_detector/log/: latest_build
perception/aruco_detector/scripts/: cam_cal.py  generate_markers.py  monitor_detections.py  process.py  run_detector.sh  standalone_detector_3d.py  test_full_system.sh
perception/detection_pose_estimator/: CMakeLists.txt  package.xml  setup.py
perception/detection_pose_estimator/config/: estimator_params.yaml
perception/detection_pose_estimator/detection_pose_estimator/: node.py
perception/detection_pose_estimator/launch/: pose_estimator.launch.py
perception/gnss_launch/: CMakeLists.txt  README.md  launch_gps.sh  package.xml
perception/gnss_launch/gnss_launch/: gnss_validator.py
perception/gnss_launch/launch/: gnss.launch.py  gnss_complete.launch.py  gnss_driver.launch.py  gnss_health_monitor.py  gnss_setup.py  gnss_validator.py
perception/gnss_launch/params/: gnss_config.yaml  ublox.yaml
perception/gnss_launch/scripts/: README.md  base_verify.py  configure_base_station.py  configure_rover.py  monitor_rtk.sh  monitor_rtk_simple.sh  monitor_survey.py  rover_check_corrections.sh  rtcm_injector.py  (+1 more)
perception/loc_fusion/: CMakeLists.txt  README.md  verify_localization.sh
perception/object_detection/: CMakeLists.txt  README.md  package.xml  setup.py
perception/pointcloud_tools/: .gitignore  README.md  package.xml  setup.py  test.sh
perception/slam_launch/: CMakeLists.txt  README.md  package.xml  setup.py
perception/zed2i_launch/: CMakeLists.txt  README.md  package.xml
perception/zed_gnss_integration/: CMakeLists.txt  package.xml  setup.py
perception/zed_gps_integration/: README.md  package.xml  setup.py  test_gps_integration.sh
rover_description/: CMakeLists.txt  README.md  package.xml
rover_description/config/: joint_names_rover.yaml  rover.rviz  rover_controller.yaml  rover_controllers.yaml
rover_description/launch/: display.launch.py  gazebo.launch.py  hw_control.launch.py  moveit.launch.py  view_rover.launch.py
rover_description/meshes/: Arm-Base.STL  Arm-Wrist.STL  Arm_Base.STL  Arm_Stage_1.STL  Arm_Stage_2.STL  Arm_Stage_4.STL  Chassis.STL  Susp-Bogie-Left.STL  Susp-Bogie-Right.STL  Susp-Rocker-Left.STL  Susp-Rocker-Right.STL
rover_description/urdf/: materials.xacro  rover.control.xacro  rover.csv  rover.urdf  rover.urdf.xacro
rover_simulation/: CMakeLists.txt  package.xml
(+781 files in other folders)
