<package format="3">
  <name>rover_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for the Rover robot.
    This package contains configuration data, 3D models and launch files
    for the Rover robot with rocker-bogie suspension and 5-DOF manipulator arm.
  </description>
  <maintainer email="rover@example.com">Rover Team</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>