<?xml version="1.0"?>
<package format="3">
  <name>rover_simulation</name>
  <version>0.0.0</version>
  <description>Rover simulation package for Gazebo</description>

  <maintainer email="rover@example.com">rover</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
