<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypename="package_format3"?>
<package format="3">
  <name>arm_control</name>
  <version>1.0.0</version>
  <description>Runtime control layer for URC rover arm - bridges MoveIt planning to hardware execution</description>
  
  <maintainer email="urc@rover.com">URC Rover Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  
  <!-- Control dependencies -->
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  <depend>ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager_msgs</depend>
  
  <!-- MoveIt dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Action/Service dependencies -->
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <!-- Additional ROS 2 dependencies -->
  <depend>builtin_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclpy_lifecycle</depend>
  
  <!-- Safety and diagnostics -->
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  
  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
