<?xml version="1.0"?>
<package format="3">
  <name>nav2_launch</name>
  <version>0.1.0</version>
  <description>
    Launch wrapper and parameter configs to bring up the full
    Navigation2 stack for the URC rover.
  </description>

  <maintainer email="dorde_ivanovic@college.harvard.edu">Djordje Ivanovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>drive_control</exec_depend>
</package>
