<?xml version="1.0"?>
<package format="3">
  <name>nav2_teensy_bridge</name>
  <version>1.0.0</version>
  <description>Bridge between Nav2 cmd_vel and Teensy motor controller via serial</description>
  
  <maintainer email="dorde_ivanovic@college.harvard.edu">Djordje Ivanovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
