<?xml version="1.0"?>
<package format="3">
  <name>path_planner</name>
  <version>0.1.0</version>
  <description>Global path planner using incremental D* Lite on a 2D occupancy grid.</description>

  <maintainer email="dorde_ivanovic@college.harvard.edu">Dorde Ivanovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
</package>
