<?xml version="1.0"?>
<package format="3">
  <name>gap_guidance</name>
  <version>0.1.0</version>
  <description>Stripe-based reactive gap finder for URC rover.</description>

  <maintainer email="dorde_ivanovic@college.harvard.edu">Djordje Ivanovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>urc_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
</package>
